--- a/main.tex
+++ b/main.tex
@@ -19,13 +19,8 @@
 \usepackage{color}                              %und dessen Einfärbung
 \usepackage{booktabs}
 \usepackage{enumitem} %angepasstes enumerieren
-<<<<<<< HEAD
-\usepackage{enumerate}
-=======
+\usepackage{enumerate} % Zeichen der Enumerierung beliebig wählen können
 \usepackage{hyperref}
-
-
->>>>>>> e3e9e9f321b412666556a838d7e77e487176b32c
 \usetikzlibrary{arrows}
 
 \pagestyle{fancy}
