--- a/kap12/kap12.tex
+++ b/kap12/kap12.tex
@@ -1,1 +1,20 @@
 \chapter{Exponetialfunktionen}
+\section{Die Zahl $e$}
+\begin{Definition}
+$e = 2,71828182845904523536028747135266249775724709369995...$\\
+Ist eine \textbf{irrationale} und \textbf{transzendete} reelle Zahl, entdeckt von Leonard Euler.Sie ist die Basis des natürlichen Logarithmus und der (natürlichen) Exponentialfunktion.
+Diese (spezielle) Exponentialfunktion wird aufgrund dieser Beziehung zur Zahl $e$ häufig kurz $e$Funktion genannt.\\
+Die Eulersche Zahl spielt in der gesamten Analysis und allen damit verbundenen Teilgebieten der Mathematik, besonders in der Differential- und Integralrechnung, eine zentrale Rolle.
+Sie gehört zu den wichtigsten Konstanten der Mathematik.
+\end{Definition}
+\begin{Definition}
+  Eine reelle Zahl heißt (oder allgemeiner eine komplexe Zahl) transzendent,
+  wenn sie nicht Nullstelle eines Polynoms mit ganzzahligen Koeffizienten ist.
+  Andernfalls handelt es sich um eine algebraische Zahl. Jede reelle transzendente Zahl ist überdies irrational.
+\end{Definition}
+\subsection{Darstellung}
+$e$ ist darstellbar bzw. ergibt sich durch:
+\begin{itemize}
+  \item \sum\limits_{k=0}^{\infty}\dfrac{1}{k!}
+  \item
+\end{itemize}
