--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -412,27 +412,13 @@
     \subsection{Lagebeziehungen zwischen Geraden}
 
         \paragraph{} Es gibt bezüglich Geraden vier verschiedene Beziehungen, vorausgesetzt diese befinden sich im $\R^3$. Zwei Geraden $g$ und $h$ können...
-        \begin{enumerate}[]
-            \item \qquad 1) ...parallel...
-            \item \qquad 2) ...identisch...
-            \item \qquad 3) ...windschief...
-        \end{enumerate}
-            ...zueinander sein oder...
-        \begin{enumerate}[]
-            \item \qquad 4) ...sich schneiden
-        \end{enumerate}
-
+        \\
+        \\
+        \begin{left}
+            \quad 1)\text{ } ...\textbf{parallel}...
+        \end{left}
         \begin{center}
             \begin{tikzpicture}[>=triangle 45]
-                \draw [->,line width=0.8pt] (-5.5,0,0) -- (5.5,0,0) node[below] {$x_2$};
-                \draw [->,line width=0.8pt] (0,-5.5,0) -- (0,5.5,0) node[right] {$x_3$};
-                \draw [->,line width=0.8pt] (0,0,-8.5) -- (0,0,8.5) node[below] {$x_1$};
-                \foreach  \x in {-5,...,-1,1,2,...,5}
-                    \draw [line width=0.8pt] (\x,0.1,0) -- (\x,-0.1,0) node[below] {\x};
-                \foreach  \x in {-5,...,-1,1,2,...,5}
-                    \draw [line width=0.8pt] (-0.1,\x,0) -- (0.1,\x,0) node[right] {\x};
-                \foreach  \x in {-7,...,-1,1,2,...,7}
-                    \draw [line width=0.8pt] (0,0.1,\x) -- (0,-0.1,\x) node[below] {\x};
                 \draw [line width=0.8pt] (-0.25,0.25) node {O};
                 \draw [->,line width=0.8pt,color=blue] (0,0,0) -- (3,4,4);
                 \draw [->,line width=0.8pt,color=red] (3,4,4) -- (5,2,-1);
@@ -442,15 +428,88 @@
                 \draw [,line width=0.8pt,color=red,dashed] (5,2,-1) -- (7,0,-6);
                 \draw [,line width=0.8pt,color=red,dashed] (4,10,13) -- (6,8,8);
                 \draw [,line width=0.8pt,color=red,dashed] (8,6,3) -- (10,4,-2);
-                \draw [line width=0.8pt,color=blue] (0.5,1.5) node {$\vv{q}$};
-                \draw [line width=0.8pt,color=red] (3.5,2.75) node {$\vv{u}$};
-                \draw [line width=0.8pt,color=red] (4.5,5.25) node {$\vv{u}$};
+                \draw [line width=0.8pt,color=blue] (0.5,1.5) node {$\vv{q_1}$};
+                \draw [line width=0.8pt,color=blue] (1.85,3.8) node {$\vv{q_2}$};
+                \draw [line width=0.8pt,color=red] (3.5,2.75) node {$\vv{u_1}$};
+                \draw [line width=0.8pt,color=red] (4.7,5.25) node {$\vv{u_2}$};
                 \draw [line width=0.8pt] (6,2.65) node {$g$};
                 \draw [line width=0.8pt] (7.7,5.15) node {$h$};
             \end{tikzpicture}
         \end{center}
 
+        \begin{left}
+            \quad 2)\text{ } ...\textbf{identisch}...
+        \end{left}
+        \begin{center}
+            \begin{tikzpicture}[>=triangle 45]
+                \draw [line width=0.8pt] (-0.25,0.25) node {O};
+                \draw [->,line width=0.8pt,color=blue] (0,0,0) -- (3,4,4);
+                \draw [->,line width=0.8pt,color=blue] (0,0,0) -- (6,1,-3.5);
+                \draw [->,line width=0.8pt,color=red] (3,4,4) -- (5,2,-1);
+                \draw [->,line width=0.8pt,color=red] (6,1,-3.5) -- (7,0,-6);
+                \draw [,line width=0.8pt,color=red,dashed] (1,6,9) -- (3,4,4);
+                \draw [,line width=0.8pt,color=red,dashed] (5,2,-1) -- (6,1,-3.5);
+                \draw [,line width=0.8pt,color=red,dashed] (7,0,-6) -- (8,-1,-8.5);
+                \draw [line width=0.8pt,color=blue] (0.5,1.5) node {$\vv{q_1}$};
+                \draw [line width=0.8pt,color=blue] (3,0.15,-1.75) node {$\vv{q_2}$};
+                \draw [line width=0.8pt,color=red] (3.3,2.75) node {$\vv{u_1}$};
+                \draw [line width=0.8pt,color=red] (6.3,0.7,-5.25) node {$\vv{u_2}$};
+                \draw [line width=0.8pt] (-0.3,2.8) node {$g = h$};
+            \end{tikzpicture}
+        \end{center}
+
+        \begin{left}
+            \quad 3)\text{ } ...\textbf{windschief zueinander}...
+        \end{left}
+        \\
+        \\
+        ...sein oder...
+        \\
+        \\
+        \begin{left}
+            \quad 4)\text{ } ...\textbf{sich schneiden}
+        \end{left}
+        \begin{center}
+            \begin{tikzpicture}[>=triangle 45]
+                \draw [line width=0.8pt] (-0.25,0.25) node {O};
+                \draw [->,line width=0.8pt,color=blue] (0,0,0) -- (3,4,4);
+                \draw [->,line width=0.8pt,color=red] (3,4,4) -- (5,2,-1);
+                \draw [->,line width=0.8pt,color=blue] (0,0,0) -- (4,0,0);
+                \draw [->,line width=0.8pt,color=red] (4,0,0) -- (4,5,0);
+                \draw [,line width=0.8pt,color=red,dashed] (1,6,9) -- (3,4,4);
+                \draw [,line width=0.8pt,color=red,dashed] (5,2,-1) -- (7,0,-6);
+                \draw [,line width=0.8pt,color=red,dashed] (4,-3,0) -- (4,0,0);
+                \draw [,line width=0.8pt,color=red,dashed] (4,5,0) -- (4,8,0);
+                \draw [line width=0.8pt,color=blue] (0.5,1.5) node {$\vv{q_1}$};
+                \draw [line width=0.8pt,color=blue] (2,0.3,0) node {$\vv{q_2}$};
+                \draw [line width=0.8pt,color=red] (3.5,2.75) node {$\vv{u_1}$};
+                \draw [line width=0.8pt,color=red] (4.3,1.8,0) node {$\vv{u_2}$};
+                \draw [line width=0.8pt] (6,2.65) node {$g$};
+                \draw [line width=0.8pt] (4.2,6,0) node {$h$};
+                \draw [line width=0.8pt,color=black,fill=black,fill opacity=0.8] (4,2.42) circle (2pt);
+                \draw [line width=0.8pt,color=black] (4.2,2.7) node {$I$};
+            \end{tikzpicture}
+        \end{center}
+
     \subsection{Abstand zu einem Punkt}
+
+        \begin{Definition}
+            \paragraph{} Der \textbf{Lotfußpunkt} $L$ einer Geraden $g$ zu einem Punkt $P$ mit $P\notin g,g:\vv{x}=\vv{q}+t\cdot\vv{u};t\in\R$
+            ist definiert durch: $\vv{LP}\odot\vv{u}=0$. Er ist somit der dem Punkt $P$ am nähesten gelegenen Punkt der Gerade $g$ und wird
+            folglich hauptsächlich zur Abstandsberechnung benutzt.
+        \end{Definition}
+
+        \paragraph{} Der Abstand von einer Geraden $g$ zu einem Punkt $P$ ist äquivalent zur \textbf{Norm des Verbindungsvektors $\vv{LP}$}, wobei $L$
+        der Lotfußpunkt der Geraden $g$ zu $P$ ist. Für die Berechnung des Abstands gibt es drei verschiedene Lösungsansätze (OHG) von denen zwei
+        gebräuchlicher sind als der dritte.
+        \\
+        \\
+        \underline{Orthogonalität}
+        \\
+        \underline{Hilfsebene}
+        \\
+        \underline{Grenzwertberechnung}
+
 
 
 \section{Ebenen}
@@ -482,7 +541,9 @@
 
 
 
-
+\section{Kreise und Kugeln}
+    \subsection{Kreise}
+    \subsection{Kugeln}
 \section{Kreuzprodukt}
 \section{Spatprodukt}
 \section{Dyadisches Produkt}
