--- a/kap12/kap12.tex
+++ b/kap12/kap12.tex
@@ -1,20 +1,43 @@
 \chapter{Exponetialfunktionen}
-\section{Die Zahl $e$}
+
+		\section{Die Eulersche Zahl ($e$)}
+
 \begin{Definition}
 $e = 2,71828182845904523536028747135266249775724709369995...$\\
-Ist eine \textbf{irrationale} und \textbf{transzendete} reelle Zahl, entdeckt von Leonard Euler.Sie ist die Basis des natürlichen Logarithmus und der (natürlichen) Exponentialfunktion.
-Diese (spezielle) Exponentialfunktion wird aufgrund dieser Beziehung zur Zahl $e$ häufig kurz $e$Funktion genannt.\\
-Die Eulersche Zahl spielt in der gesamten Analysis und allen damit verbundenen Teilgebieten der Mathematik, besonders in der Differential- und Integralrechnung, eine zentrale Rolle.
-Sie gehört zu den wichtigsten Konstanten der Mathematik.
+.\\
+$e$ ist eine irrationale, transzendente und reelle Zahl, die die Basis des natürlichen Logarithmus und der (natürlichen) Exponentialfunktion ist.\\
+Die Darstellung, der man am Häufigsten begegnet ist diese:
+$e=\lim\limits_{n\to \infty}(1+\dfrac{1}{n})^n
 \end{Definition}
+Benannt nach dem bekannten Mathematiker Leonhard Euler ist diese Zahl eine der wichtigsten Konstanten der Mathematik.
+Sie ist die Basis des natürlichen Logarithmus und der (natürlichen) Exponentialfunktion. Diese (spezielle) Exponentialfunktion wird aufgrund dieser Beziehung zur Zahl $e$ häufig kurz $e$-Funktion genannt.
 \begin{Definition}
   Eine reelle Zahl heißt (oder allgemeiner eine komplexe Zahl) transzendent,
   wenn sie nicht Nullstelle eines Polynoms mit ganzzahligen Koeffizienten ist.
   Andernfalls handelt es sich um eine algebraische Zahl. Jede reelle transzendente Zahl ist überdies irrational.
 \end{Definition}
-\subsection{Darstellung}
+
+	\subsection{Verschiedene Darstellungen}
+
 $e$ ist darstellbar bzw. ergibt sich durch:
 \begin{itemize}
-  \item \sum\limits_{k=0}^{\infty}\dfrac{1}{k!}
-  \item
+\item $\sum\limits_{k=0}^{\infty}\dfrac{1}{k!}$
+\item $\lim\limits_{t\to \infty}(1+\dfrac{1}{t})^t;t\in\R$
+\item $\lim\limits_{n\to \infty}(1+\dfrac{1}{n})^n;n\in\N$
 \end{itemize}
+
+	\subsection{Herleitung}
+
+Anhand mancher Überlegungen, denen wir jetzt nachgehen werden, lassen sich einige Eigenschaften der Eulerschen Zahl schließen.\\
+\\ Wir definieren eine Folge $(e_{n})n\in\N$ durch $e_{n}=(1+\dfrac{1}{n})^n$ und versuchen ihre Konvergenz zu beweisen.
+\begin{itemize}
+\item \dfrac{e_{n+1}{e_{n}}=\dfrac{}{}
+
+		\ection{Die Exponentialfunktion}
+
+	\subsection{Eigenschaften}
+
+		\section{Die Logarythmusfunktion}
+
+	\subsection{Eigenschaften}
+
