Räumlich gut zum Vorstellen was uns das Skalarprodukt bringt (NEIN Herr Hegemann, das Skalarprodukt ist nicht nur irgendeine Zahl (das war seine Antwort an Liam) ). Ich weis nicht ob es in unserem Programm ist, aber ist ganz cool :)

--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -582,7 +582,20 @@
             $d(g,P) = \dfrac{|\textcolor{red}{\vv{u}}\times\vv{\textcolor{blue}{Q}P}|}{|\textcolor{red}{\vv{u}}|}$.
         \end{Bemerkung}
 
-
+    \subsection{Abstand zweier Windschiefer Geraden}
+    
+\\    
+Zwei windschiefe Geraden haben einen eindeutig definierten Minimalabstand. Aus zwei Geraden\\
+\\
+\qquad $g:\vv{x}=\vv{p}+t*\vv{u}, t\in \R$ \qquad und \qquad $h:\vv{x}=\vv{q}+r*\vv{v}, r\in \R$   \\ 
+    
+    l"asst sich mit dem Kreuzprodukt ein normierter Normalenvektor $n_{0}$ zu beiden Richtungsvektoren $\vv{u}$ und $\vv{v}$ errechnen, den man mit dem Verbindungsvektor der beiden Ortsvektoren ($\vv{q}-\vv{p}$) zur Minimalabstandsberechnung der beiden Geraden skaliert:\\ 
+    
+   \qquad $d(g,h)= |n_{0} * (\vv{q}-\vv{p})| =  |\dfrac{\vv{u} \times \vv{v}}{|\vv{u} \times \vv{v}|} * (\vv{q}-\vv{p}) |
+    
+    
+    
+    
 
 \section{Ebenen}
 
